<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <group
            android:id="@+id/first_group"
            android:checkableBehavior="single">
            <item
                android:id="@+id/drawer_timeline"
                android:icon="@drawable/ic_timeline_white_24dp"
                android:title="@string/drawer_timeline"/>
            <item
                android:id="@+id/drawer_categories"
                android:icon="@drawable/ic_view_list_white_24dp"
                android:title="@string/drawer_categories"/>
            <item
                android:id="@+id/drawer_albums"
                android:icon="@drawable/ic_photo_album_white_24dp"
                android:title="@string/drawer_albums"/>
            <item
                android:id="@+id/drawer_artists"
                android:icon="@drawable/ic_face_white_24dp"
                android:title="@string/drawer_artists"/>
        </group>
        <group
            android:id="@+id/second_group"
            android:checkableBehavior="single">
            <item
                android:id="@+id/drawer_create"
                android:icon="@drawable/ic_edit_white_24dp"
                android:title="@string/drawer_create"/>
            <item
                android:id="@+id/drawer_schedulers"
                android:icon="@drawable/ic_schedule_white_24dp"
                android:title="@string/drawer_schedulers"/>
            <item
                android:id="@+id/drawer_profile"
                android:icon="@drawable/ic_person_white_24dp"
                android:title="@string/drawer_profile"/>
        </group>
        <group
            android:id="@+id/third_group"
            android:checkableBehavior="none">
            <item
                android:id="@+id/drawer_feedback"
                android:title="@string/drawer_feedback"/>
            <item
                android:id="@+id/drawer_logout"
                android:title="@string/drawer_logout"/>
        </group>
    </group>
</menu>