<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:layout_marginEnd="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginStart="20dp"
    android:background="@color/primary_color"
    card_view:cardElevation="4dp"
    card_view:cardPreventCornerOverlap="false"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_color"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_email_textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/primary_text_color"
            app:errorEnabled="true"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:scrollHorizontally="true"
                android:textColor="@color/primary_text_color"
                android:textSize="16sp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password_textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/primary_text_color"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/secondary_text_color"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:scrollHorizontally="true"
                android:textColor="@color/primary_text_color"
                android:textSize="16sp"
                />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/login_remember_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:checked="true"
                android:gravity="center_vertical"
                android:layout_alignParentTop="true"
                android:includeFontPadding="false"
                android:scaleX="0.9"
                android:scaleY="0.9"
                android:text="@string/remember_me"
                android:textColor="@color/primary_text_color"
                android:textSize="15sp"
                android:transformPivotX="0dp"

                />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_forgot_password_button"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleX="0.9"
                android:scaleY="0.9"
                android:transformPivotX="60dp"
                android:background="@null"
                android:includeFontPadding="false"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/primary_text_color"
                android:textSize="15sp"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/accent_color"
                android:text="@string/login"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/primary_text_color"
                android:textSize="15sp"
                />


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/email_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@color/accent_color"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/primary_text_color"
                android:textSize="15sp"
                />

        </LinearLayout>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/facebook_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/facebook_button"
            android:drawableLeft="@drawable/ic_facebook_white_24dp"
            android:drawablePadding="-24dp"
            android:drawableStart="@drawable/ic_facebook_white_24dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/facebook"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/primary_text_color"
            android:textSize="15sp"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/google_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@color/google_button"
            android:drawableLeft="@drawable/ic_google_white_24dp"
            android:drawablePadding="-24dp"
            android:drawableStart="@drawable/ic_google_white_24dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="Continue with Google"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/primary_text_color"
            android:textSize="15sp"
            />

    </LinearLayout>
</android.support.v7.widget.CardView>