<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:layout_marginEnd="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginStart="20dp"
    card_view:cardElevation="4dp"
    card_view:cardPreventCornerOverlap="false"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:background="@color/primary_color"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_email_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/primary_text_color"
                app:errorEnabled="true"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_email_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:scrollHorizontally="true"
                    android:textColor="@color/primary_text_color"
                    android:textSize="15sp"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_password_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/primary_text_color"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/secondary_text_color"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:scrollHorizontally="true"
                    android:textColor="@color/primary_text_color"
                    android:textSize="15sp"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_password_repeat_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/primary_text_color"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/secondary_text_color"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_password_repeat_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:hint="@string/password_repeat"
                    android:inputType="textPassword"
                    android:scrollHorizontally="true"
                    android:textColor="@color/primary_text_color"
                    android:textSize="15sp"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/continue_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/accent_color"
            android:layout_alignParentBottom="true"
            android:text="@string/continue_to"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/primary_text_color"
            android:textSize="15sp"
            />

    </RelativeLayout>
</android.support.v7.widget.CardView>